--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dependencies": {
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
+        "dotenv": "^8.2.0",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "isotope-layout": "^3.0.6",
         "lottie-web": "^5.6.3",
         "morgan": "~1.9.1",
+        "nodeenv": "^3.0.0",
         "nodemon": "^2.0.2"
     }
 }
